tests/fail/parse-error-002.virtue
a +=

# error: parse error
#  --> test.virtue:1:5
#    |
#  1 | a +=
#    |     ^ expected expression
#
